--- a/src/components/Box/action.module.scss
+++ b/src/components/Box/action.module.scss
@@ -34,21 +34,4 @@
         cursor: not-allowed;
         opacity: .4;
     }
-
-    & > * {
-        line-height: 1lh !important;
-    }
-
-    & > span {
-        padding-inline: var(--padding, 1rem);
-        margin-inline: calc(var(--padding, 1rem) / -2);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-weight: inherit;
-    }
-
-    & > span + i {
-        margin-inline-start: auto;
-    }
 }
